--- a/.travis.yml
+++ b/.travis.yml
@@ -82,8 +82,9 @@ matrix:
       - MB_PYTHON_VERSION=3.7
       - COMPAT_CLASSIFIER="Operating System :: MacOS;Programming Language :: Python :: 3.7"
 before_install:
+# Exit as early as possible if this configuration is not needed
+- python ./run.py check-build-classifiers build-spec.json || exit 0
 - pip install -Ur ./requirements.txt
-- python ./run.py check-build-classifiers || exit 0
 - eval $(python ./run.py build-spec build-spec.json)
 - git clone "${BUILD_SPEC_CLONE_URL}" "$REPO_DIR"
 - export BUILD_COMMIT="${BUILD_SPEC_COMMIT}"
